# python-microservices-docker

./: README.md  docker-compose.yml
api/: Dockerfile  api.py
db/: init.sql
faker/: Dockerfile  faker-end.py  pyproject.toml
tests/: test_api.py
web/: Dockerfile  pyproject.toml  web-service.py
web/templates/: admin.html  table.html
